# sPyNNaker

./: .coveragerc  .gitignore  .pylint_dict.txt  .pylintrc  .ratexcludes  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CITATION.cff  LICENSE_POLICY.md  MANIFEST.in  README.md  REMOVE_ME  Recruitment_at_Manchester_DF.pptx  additional__input_8h.html  additional__input_8h_source.html  additional__input__ca2__adaptive__impl_8h.html  additional__input__ca2__adaptive__impl_8h_source.html  additional__input__none__impl_8h.html  additional__input__none__impl_8h_source.html  annotated.html  c__main_8c.html  classes.html  common__kernel_8c.html  common__kernel_8h.html  common__kernel_8h_source.html  common__mem_8h.html  common__mem_8h_source.html  connection__generator_8c.html  connection__generator_8h.html  connection__generator_8h_source.html  connection__generator__all__to__all_8h.html  connection__generator__all__to__all_8h_source.html  connection__generator__fixed__post_8h.html  connection__generator__fixed__post_8h_source.html  connection__generator__fixed__pre_8h.html  connection__generator__fixed__pre_8h_source.html  connection__generator__fixed__prob_8h.html  connection__generator__fixed__prob_8h_source.html  connection__generator__fixed__total_8h.html  (+296 more)
.github/: dependabot.yml
.travis/: KWStyle.xml  run-kwstyle.sh  run-vera.sh
c/: additional__input_8h.html  additional__input_8h_source.html  additional__input__ca2__adaptive__impl_8h.html  additional__input__ca2__adaptive__impl_8h_source.html  additional__input__none__impl_8h.html  additional__input__none__impl_8h_source.html  annotated.html  bit__field__expander_8c.html  bit__field__expander_8c_source.html  bit__field__expander_8h.html  bit__field__expander_8h_source.html  bit__field__filter_8h.html  bit__field__filter_8h_source.html  c__main_8c.html  c__main_8c_source.html  c__main__common_8h_source.html  c__main__local__only_8c_source.html  c__main__neuron__common_8h_source.html  c__main__neurons_8c.html  c__main__neurons_8c_source.html  c__main__synapse__common_8h_source.html  c__main__synapses_8c.html  c__main__synapses_8c_source.html  classes.html  common__kernel_8c.html  common__kernel_8c_source.html  common__kernel_8h.html  common__kernel_8h_source.html  common__mem_8h.html  common__mem_8h_source.html  connection__generator_8c.html  connection__generator_8c_source.html  connection__generator_8h.html  connection__generator_8h_source.html  connection__generator__all__but__me_8h.html  connection__generator__all__but__me_8h_source.html  connection__generator__all__to__all_8h.html  connection__generator__all__to__all_8h_source.html  connection__generator__fixed__post_8h.html  connection__generator__fixed__post_8h_source.html  (+488 more)
doc/: Makefile  doc_requirements.txt  make.bat  unfiltered-files.txt
examples/: .gitignore  mwh_synfire.py  mwh_synfire_cond.py  mwh_synfire_stoc.py  stdp_curve.py  stdp_triplet.py  svn_synfire.py  test.py  tsodyks_markram.py
integration_tests/: bigMultiProcessorSpikeSourcePrint.py  break.py  mwh_population_synfire.py  mwh_synfire.py  mwh_synfire_with_different_machine_time_steps.py  mwhsynfiresmallnetworkrunsoutofsynapsememory.py  one_pop_lif_example.py  params_set_as_list.py  plot_neuron_parameter.py  potential_stops_with_2_neurons.py  pynnBrunnelBrianNestSpinnaker.py  small_multi_processor_spike_source_print.py  spike_server_pacman_side.py  split.py  spynnaker_full_tester.py  stdp_pairing.py  synfire_if_curr_exp.py  synfire_if_curr_exp_random.py  synfire_if_curr_exp_x6.py  synfire_izk_curr_exp.py  test.py  testCrash.py  test_poisson.py
neural_modelling/: .common_template.tag  .fec_template.tag  .gitignore  .sllt_template.tag  CHANGES_April_2018  Doxyfile  Makefile  commoncopy.mk  commoncopy.mkx  convertor.py  defs.txt  localcommon.mk  mainpage.dox  neuroncopy.mkx  orig_Makefile  setup  setup.bash
p7_integration_tests/: base_test_case.py  setup.py
p8_integration_tests/: README.md  base_test_case.py  setup.py
prior_integration_tests/: small_multi_processor_spike_source_print.py
proxy_integration_tests/: __init__.py
pyNN-spiNNaker-src/: setup.py
python/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  spynnaker.html  spynnaker.pyNN.connections.html  spynnaker.pyNN.data.html  spynnaker.pyNN.external_devices.html  spynnaker.pyNN.external_devices_models.html  spynnaker.pyNN.external_devices_models.push_bot.control.html  spynnaker.pyNN.external_devices_models.push_bot.ethernet.html  spynnaker.pyNN.external_devices_models.push_bot.html  spynnaker.pyNN.external_devices_models.push_bot.parameters.html  spynnaker.pyNN.external_devices_models.push_bot.push_bot_control_modules.html  spynnaker.pyNN.external_devices_models.push_bot.push_bot_ethernet.html  spynnaker.pyNN.external_devices_models.push_bot.push_bot_parameters.html  spynnaker.pyNN.external_devices_models.push_bot.push_bot_spinnaker_link.html  spynnaker.pyNN.external_devices_models.push_bot.spinnaker_link.html  spynnaker.pyNN.extra_algorithms.html  spynnaker.pyNN.extra_algorithms.splitter_components.html  (+52 more)
(+4686 files in other folders)
