# Copyright (c) 2023 The University of Manchester
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = sPyNNaker
version = attr: spynnaker._version.__version__
description = Tools for simulating neural models generated using PyNN on the SpiNNaker platform
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SpiNNakerManchester/SpyNNaker
license = Apache-2.0
classifiers =
        Development Status :: 5 - Production/Stable
        Intended Audience :: Developers
        Intended Audience :: Science/Research
        License :: OSI Approved :: Apache Software License
        Natural Language :: English
        Operating System :: POSIX :: Linux
        Operating System :: Microsoft :: Windows
        Operating System :: MacOS
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: 3.12
maintainer = SpiNNakerTeam
maintainer_email = spinnakerusers@googlegroups.com
keywords =
        spinnaker
        pynn

[options]
python_requires = >=3.8, <4
packages = find:
zip_safe = True
include_package_data = True
install_requires =
        SpiNNFrontEndCommon == 1!7.3.1
        matplotlib
        quantities
        pynn >= 0.11, != 0.12.0
        neo
        lazyarray
        # below may fail for read the docs
        scipy
        csa
        # cap indirect import. Higher python require indrectly
        morphio < 3.3.10; python_version == '3.8'

[options.packages.find]
include =
        spynnaker
        spynnaker.*

[options.package_data]
spynnaker.pyNN.model_binaries =
        *.aplx
        *.dict
* =
        spynnaker.cfg
        *.sql
        py.typed


[options.extras_require]
test =
        SpiNNakerTestBase == 1!7.3.1
        # pytest will be brought in by pytest-cov
        pytest-cov
        testfixtures
        mock
        graphviz

